--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.1",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:all": "concurrently \"yarn start\" \"yarn serve\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +41,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "volta": {
+    "node": "14.21.3"
+  },
+  "devDependencies": {
+    "concurrently": "^5",
+    "json-server": "^0.16",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
